update partners function
